--- a/roles/ha/tasks/main.yml
+++ b/roles/ha/tasks/main.yml
@@ -9,10 +9,10 @@
     src: haproxy.cfg.j2
     dest: /etc/haproxy/haproxy.cfg
     mode: '0644'
-  notify: restart haproxy
+  notify: Restart haproxy
 
 - name: Start and enable HAProxy
   systemd:
     name: haproxy
     state: started
-    enabled: yes
+    enabled: true
