--- a/roles/kubernetes/tasks/main.yml
+++ b/roles/kubernetes/tasks/main.yml
@@ -12,7 +12,7 @@
 
 - name: Download Kubernetes binaries script
   copy:
-    src: ../../files/scripts/download-k8s-binaries.sh
+    src: files/scripts/download-k8s-binaries.sh
     dest: /tmp/download-k8s-binaries.sh
     mode: '0755'
 
@@ -20,6 +20,7 @@
   command: /tmp/download-k8s-binaries.sh {{ k8s_version }}
   args:
     chdir: /tmp
+  changed_when: false
 
 - name: Install Kubernetes components
   package:
@@ -28,21 +29,22 @@
       - kubeadm={{ k8s_version }}-00
       - kubectl={{ k8s_version }}-00
     state: present
-    allow_downgrades: yes
+    allow_downgrades: true
 
 - name: Hold Kubernetes packages at current version
   command: apt-mark hold kubelet kubeadm kubectl
   when: ansible_os_family == "Debian"
+  changed_when: false
 
 - name: Configure kubelet
   template:
     src: kubelet.conf.j2
     dest: /etc/systemd/system/kubelet.service.d/10-kubeadm.conf
     mode: '0644'
-  notify: reload systemd
+  notify: Reload systemd
 
 - name: Start and enable kubelet service
   systemd:
     name: kubelet
     state: started
-    enabled: yes
+    enabled: true
