--- a/roles/common/handlers/main.yml
+++ b/roles/common/handlers/main.yml
@@ -1,14 +1,14 @@
 ---
-- name: restart docker
+- name: Restart docker
   systemd:
     name: docker
     state: restarted
 
-- name: restart kubelet
+- name: Restart kubelet
   systemd:
     name: kubelet
     state: restarted
 
-- name: reload systemd
+- name: Reload systemd
   systemd:
-    daemon_reload: yes
+    daemon_reload: true
