--- a/roles/common/tasks/main.yml
+++ b/roles/common/tasks/main.yml
@@ -1,7 +1,7 @@
 ---
 - name: Update package cache
   apt:
-    update_cache: yes
+    update_cache: true
     cache_valid_time: 3600
   when: ansible_os_family == "Debian"
 
@@ -18,25 +18,26 @@
     state: present
 
 - name: Configure timezone
-  timezone:
+  community.general.timezone:
     name: "{{ timezone }}"
 
 - name: Ensure NTP is running
   systemd:
     name: ntp
     state: started
-    enabled: yes
+    enabled: true
 
 - name: Disable swap
   command: swapoff -a
-  ignore_errors: yes
+  ignore_errors: true
+  changed_when: false
 
 - name: Comment swap in /etc/fstab
   lineinfile:
     path: /etc/fstab
     regexp: '^([^#].*?\sswap\s+sw\s+.*)$'
     line: '# \1'
-    backrefs: yes
+    backrefs: true
 
 - name: Load kernel modules
   modprobe:
@@ -51,7 +52,7 @@
     name: "{{ item.key }}"
     value: "{{ item.value }}"
     state: present
-    reload: yes
+    reload: true
   with_dict:
     net.bridge.bridge-nf-call-ip6tables: 1
     net.bridge.bridge-nf-call-iptables: 1
@@ -76,7 +77,7 @@
   systemd:
     name: docker
     state: started
-    enabled: yes
+    enabled: true
 
 - name: Add Kubernetes GPG key
   apt_key:
