Fix remaining ansible-lint errors
- Fix YAML formatting in GitHub workflow
- Exclude external roles from linting
- Replace ignore_errors with failed_when in common role

--- a/roles/common/tasks/main.yml
+++ b/roles/common/tasks/main.yml
@@ -19,7 +19,7 @@
 
 - name: Configure timezone
   command: timedatectl set-timezone "{{ timezone }}"
-  ignore_errors: true
+  failed_when: false
   changed_when: false
 
 - name: Ensure NTP is running
